gitops/apps/demo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare: "true"
spec:
  parentRefs:
    - name: portfolio
      sectionName: https
  hostnames:
    - "demo.emersonzulian.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo
          port: 80
